--- a/code/Makefile
+++ b/code/Makefile
@@ -8,14 +8,14 @@ RM = rm -f
 ########## VARIABLES ##########################################
 BIN = polyTest
 OFILES_poly_test = test.o polynomial.o
-OFILES_assembly = assembly.o polynomial.o
+OFILES_assembly = assembly.o polynomial.o VTKwriter.o
 
 ########## TARGETS ############################################
 .PHONY: all test clean
 all: test assembly
 
 clean:
-	$(RM) $(BIN) $(OFILES_poly_test) $(OFILES_assambly)
+	$(RM) $(BIN) $(OFILES_poly_test) $(OFILES_assembly)
 
 test: polyTest
 	./polyTest
@@ -39,3 +39,4 @@ assembly: $(OFILES_assembly)
 test.o: test.cpp polynomial.hpp monmomials_and_basefunctions.hpp Grid.hpp DataTypes.hpp assembly.hpp
 polynomial.o: polynomial.cpp polynomial.hpp monmomials_and_basefunctions.hpp
 assembly.o: assembly.hpp assembly.cpp polynomial.hpp monmomials_and_basefunctions.hpp Grid.hpp DataTypes.hpp
+VTKwriter.o: VTKwriter.cpp VTKwriter.hpp Grid.hpp DataTypes.hpp
