--- a/code/Makefile
+++ b/code/Makefile
@@ -10,13 +10,14 @@ BIN = test assembly analyticalTest
 OFILES_test = test.o polynomial.o Grid.o
 OFILES_assembly = assembly.o polynomial.o VTKwriter.o Grid.o
 OFILES_analyticalTest = analyticalTest.o polynomial.o VTKwriter.o Grid.o
+OFILES_analyticalConvTest = analyticalConvergenceTest.o polynomial.o VTKwriter.o Grid.o
 
 ########## TARGETS ############################################
 .PHONY: all test clean
 all: ${BIN}
 
 clean:
-	$(RM) $(BIN) $(OFILES_test) $(OFILES_assembly) ${OFILES_analyticalTest}
+	$(RM) $(BIN) $(OFILES_test) $(OFILES_assembly) ${OFILES_analyticalTest} ${OFILES_analyticalConvTest}
 
 test: test_compile
 	./test
@@ -29,6 +30,9 @@ assembly: $(OFILES_assembly)
 	$(CPP) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 analyticalTest: $(OFILES_analyticalTest)
+	$(CPP) $(CFLAGS) -o $@ $^ $(LDFLAGS)
+
+analyticalConvergenceTest: $(OFILES_analyticalConvTest)
 	$(CPP) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 
@@ -45,5 +49,6 @@ test.o: test.cpp polynomial.hpp monmomials_and_basefunctions.hpp Grid.hpp DataTy
 polynomial.o: polynomial.cpp polynomial.hpp monmomials_and_basefunctions.hpp
 assembly.o: assembly.hpp assembly.cpp polynomial.hpp monmomials_and_basefunctions.hpp Grid.hpp DataTypes.hpp
 VTKwriter.o: VTKwriter.cpp VTKwriter.hpp Grid.hpp DataTypes.hpp
-analyticalTest.o: analyticalTest.cpp stepper.hpp Grid.hpp VTKwriter.hpp
+analyticalTest.o: analyticalTest.cpp stepper.hpp Grid.hpp VTKwriter.hpp assembly.hpp
+analyticalConvergenceTest.o: analyticalConvergenceTest.cpp stepper.hpp Grid.hpp VTKwriter.hpp assembly.hpp
 Grid.o: Grid.hpp DataTypes.hpp
