--- a/code/Makefile
+++ b/code/Makefile
@@ -6,11 +6,12 @@ CFLAGS = -O3 -g -Wall -ansi -std=c++11
 RM = rm -f
 
 ########## VARIABLES ##########################################
-BIN = test assembly analyticalTest
+BIN = test assembly analyticalTest analyticalConvergenceTest solidBodyRotation
 OFILES_test = test.o polynomial.o Grid.o
 OFILES_assembly = assembly.o polynomial.o VTKwriter.o Grid.o
 OFILES_analyticalTest = analyticalTest.o polynomial.o VTKwriter.o Grid.o
 OFILES_analyticalConvTest = analyticalConvergenceTest.o polynomial.o VTKwriter.o Grid.o
+OFILES_solidBodyRotation = solidBodyRotation.o polynomial.o VTKwriter.o Grid.o
 
 ########## TARGETS ############################################
 .PHONY: all test clean
@@ -35,6 +36,8 @@ analyticalTest: $(OFILES_analyticalTest)
 analyticalConvergenceTest: $(OFILES_analyticalConvTest)
 	$(CPP) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
+solidBodyRotation: $(OFILES_solidBodyRotation)
+	$(CPP) $(CFLAGS) -o $@ $^ $(LDFLAGS)
 
 ##########  GENERAL RULEs #####################################
 .cpp.o:
@@ -49,6 +52,7 @@ test.o: test.cpp polynomial.hpp monmomials_and_basefunctions.hpp Grid.hpp DataTy
 polynomial.o: polynomial.cpp polynomial.hpp monmomials_and_basefunctions.hpp
 assembly.o: assembly.hpp assembly.cpp polynomial.hpp monmomials_and_basefunctions.hpp Grid.hpp DataTypes.hpp
 VTKwriter.o: VTKwriter.cpp VTKwriter.hpp Grid.hpp DataTypes.hpp
-analyticalTest.o: analyticalTest.cpp stepper.hpp Grid.hpp VTKwriter.hpp assembly.hpp
-analyticalConvergenceTest.o: analyticalConvergenceTest.cpp stepper.hpp Grid.hpp VTKwriter.hpp assembly.hpp
+analyticalTest.o: analyticalTest.cpp stepper.hpp Grid.hpp VTKwriter.hpp assembly.hpp DataTypes.hpp
+analyticalConvergenceTest.o: analyticalConvergenceTest.cpp stepper.hpp Grid.hpp VTKwriter.hpp assembly.hpp DataTypes.hpp
+solidBodyRotation.o: solidBodyRotation.cpp stepper.hpp Grid.hpp VTKwriter.hpp assembly.hpp DataTypes.hpp
 Grid.o: Grid.hpp DataTypes.hpp
