--- a/code/Makefile
+++ b/code/Makefile
@@ -1,9 +1,20 @@
 ########## COMPILER and FLAGS #################################
-CC  = gcc
-CPP = g++
+CC  = icc
+CPP = icpc
 
-CFLAGS = -O3 -g -Wall -ansi -std=c++11
+
+CFLAGS = -O3 -g -Wall -ansi -std=c++11 -xhost
 RM = rm -f
+
+# If you want to make use of the likwid profiler
+# uncommend the following two lines
+# the evvirement variables LIKWID_LIB and LIKWID_INC has to be set
+# on the rrze cluster this variables are already set
+LIKWID_FLAGS  = -DUSE_LIKWID $(LIKWID_INC) -DLIKWID_PERFMON
+LIKWIDLD_FLAGS = $(LIKWID_LIB) -llikwid -lm
+
+CFLAGS += $(LIKWID_FLAGS)
+LDFLAGS = $(LIKWIDLD_FLAGS)
 
 ########## VARIABLES ##########################################
 BIN = test assembly analyticalTest analyticalConvergenceTest solidBodyRotation
@@ -11,14 +22,15 @@ OFILES_test = test.o polynomial.o Grid.o
 OFILES_assembly = assembly.o polynomial.o VTKwriter.o Grid.o
 OFILES_analyticalTest = analyticalTest.o polynomial.o VTKwriter.o Grid.o
 OFILES_analyticalConvTest = analyticalConvergenceTest.o polynomial.o VTKwriter.o Grid.o
-OFILES_solidBodyRotation = solidBodyRotation.o polynomial.o VTKwriter.o Grid.o
+OFILES_solidBodyRotation =  solidBodyRotation.o polynomial.o VTKwriter.o Grid.o
 
 ########## TARGETS ############################################
 .PHONY: all test clean
 all: ${BIN}
 
 clean:
-	$(RM) $(BIN) $(OFILES_test) $(OFILES_assembly) ${OFILES_analyticalTest} ${OFILES_analyticalConvTest}
+	$(RM) $(BIN) $(OFILES_test) $(OFILES_assembly) ${OFILES_analyticalTest} \
+				${OFILES_analyticalConvTest} ${OFILES_solidBodyRotation}
 
 test: test_compile
 	./test
